Name:		Iteratee
Version:        0.1.0
Cabal-Version:  >= 1.2
Description:	The IterateeGM monad provides strict, safe, and functional
                I/O.  In addition to pure Iteratee processors, file IO and 
                combinator functions are provided.
License:	BSD3
License-file:	LICENSE
Author:		Oleg Kiselyov
Maintainer:	John W. Lato, jwlato@gmail.com
Stability:	experimental
synopsis:       Iteratee-based I/O
category:       System, Data
build-type:     Simple
cabal-version:  >= 1.2
tested-with:    GHC == 6.10.1, GHC == 6.8.3
extra-source-files: README

flag splitBase
  description: Choose the new split-up base package.

Library
 Hs-Source-Dirs:        src
 ghc-options:           -O2 -Wall
 if flag(splitBase)
   build-depends:       base >= 3, base < 5
 else
   build-depends:       base < 3
  if impl(ghc >= 6.10)
    ghc-options:        -fsimplifier-phases=4
 build-depends:         haskell98, mtl, containers, unix, storablevector
 exposed-modules:       Data.Iteratee
                        Data.Iteratee.Base
                        Data.Iteratee.Binary
                        Data.Iteratee.IO.RandomIO
                        Data.Iteratee.Codecs.Wave
                        Data.Iteratee.Codecs.Tiff
 other-modules:         Data.Iteratee.IO.Base
                        Data.Iteratee.IO.LowLevelIO
