name:          iteratee
version:       0.9.0.0
synopsis:      Iteratee-based I/O
description:
  The Iteratee monad provides strict, safe, and functional I/O. In addition
  to pure Iteratee processors, file IO and combinator functions are provided.

  See @Data.Iteratee@ for full documentation.
category:      System, Data
author:        Oleg Kiselyov, John W. Lato
maintainer:    John W. Lato <jwlato@gmail.com>
license:       BSD3
license-file:  LICENSE
homepage:      http://www.tiresiaspress.us/haskell/iteratee
tested-with:   GHC == 7.2.1, GHC == 7.4.2
stability:     experimental

cabal-version: >= 1.10
build-type:    Simple

extra-source-files:
  CONTRIBUTORS
  README
  Examples/*.hs
  Examples/*.lhs
  Examples/*.txt
  tests/*.hs
  bench/*.hs

library
  default-language: Haskell2010
  hs-source-dirs:
    src

  if os(windows)
    cpp-options: -DUSE_WINDOWS
    exposed-modules:
      Data.Iteratee.IO.Windows
  else
    cpp-options: -DUSE_POSIX
    exposed-modules:
      Data.Iteratee.IO.Fd
    build-depends:
      unix                    >= 2 && < 3,
      unix-bytestring         >= 0.3.5 && < 0.4

  build-depends:
    base                      >= 3       && < 6,
    ListLike                  >= 1.0     && < 4,
    MonadCatchIO-transformers >  0.2     && < 0.4,
    bytestring                >= 0.9     && < 0.11,
    containers                >= 0.2     && < 0.6,
    lifted-base               >= 0.1.1   && < 0.3,
    monad-control             >= 0.3     && < 0.4,
    parallel                  >= 2       && < 4,
    transformers              >= 0.2     && < 0.4,
    transformers-base         >= 0.4     && < 0.5

  exposed-modules:
    Data.Iteratee
    Data.Iteratee.Base
    Data.Iteratee.Base.ReadableChunk
    Data.Iteratee.Base.LooseMap
    Data.Iteratee.Binary
    Data.Iteratee.Char
    Data.Iteratee.Exception
    Data.Iteratee.IO
    Data.Iteratee.IO.Handle
    Data.Iteratee.IO.Interact
    Data.Iteratee.Iteratee
    Data.Iteratee.ListLike
    Data.Iteratee.Parallel
    Data.Iteratee.PTerm

  other-modules:
    Data.Iteratee.IO.Base

  ghc-options:   -Wall -O2
  if impl(ghc >= 6.8)
    ghc-options: -fwarn-tabs


Test-Suite testIteratee
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: testIteratee.hs
  hs-source-dirs: tests src
  ghc-options:    -fhpc -hpcdir dist/hpc/mix/iteratee-0.9.0.0

  if os(windows)
    cpp-options: -DUSE_WINDOWS
  else
    cpp-options: -DUSE_POSIX
    build-depends:
      unix                    >= 2 && < 3,
      unix-bytestring         >= 0.3.5 && < 0.4

  build-depends:
      base,
      iteratee,
      bytestring,
      directory,
      mtl,
      ListLike,
      transformers,
      monad-control,
      transformers-base,
      lifted-base,
      parallel,
      HUnit                      == 1.2.* ,
      QuickCheck                 >= 2   && < 3,
      test-framework             >= 0.3 && < 0.7,
      test-framework-quickcheck2 >= 0.2 && < 0.3,
      test-framework-hunit       >= 0.2 && < 0.3

benchmark bench-all
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        BenchAll.hs

  if os(windows)
    cpp-options: -DUSE_WINDOWS
  else
    cpp-options: -DUSE_POSIX
    build-depends:
      unix                    >= 2 && < 3,
      unix-bytestring         >= 0.3.5 && < 0.4

  build-depends:
      base,
      iteratee,
      bytestring,
      ListLike,
      transformers,
      criterion  >= 0.6 && < 0.7,
      deepseq    >= 1.2 && < 2,
      mtl        >= 2   && < 3
  ghc-options: -O2


source-repository head
  type:     darcs
  location: http://www.tiresiaspress.us/haskell/iteratee
